--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 VITE_REACT_API_URL = https://api.gatorinu.com/api/v2/
+
+
+
+live = https://api.gatorinu.com/api/v2/
+local = http://localhost:8601/api/v2/
